--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "license": "ISC",
   "type": "commonjs",
   "dependencies": {
+    "@aws-sdk/client-s3": "^3.958.0",
     "discord.js": "^14.25.1",
     "mongoose": "^9.0.2"
   }
