--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
     "discord.js": "^14.25.1",
-    "mongoose": "^9.0.2"
+    "mongoose": "^9.0.2",
+    "snowflake-id": "^1.1.0"
   }
 }
