--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
   "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
+    "cors": "^2.8.5",
     "discord.js": "^14.25.1",
+    "express": "^5.2.1",
     "mongoose": "^9.0.2",
     "snowflake-id": "^1.1.0"
   }
