--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "discord.js": "^14.25.1",
     "express": "^5.2.1",
     "mongoose": "^9.0.2",
+    "node-fetch": "^3.3.2",
     "snowflake-id": "^1.1.0"
   }
 }
