--- a/package.json
+++ b/package.json
@@ -12,9 +12,12 @@
   "type": "commonjs",
   "dependencies": {
     "@aws-sdk/client-s3": "^3.958.0",
+    "axios": "^1.13.2",
     "cors": "^2.8.5",
     "discord.js": "^14.25.1",
     "express": "^5.2.1",
+    "express-session": "^1.18.2",
+    "jsonwebtoken": "^9.0.3",
     "mongoose": "^9.0.2",
     "node-fetch": "^3.3.2",
     "snowflake-id": "^1.1.0"
